metadata/objects/Todo__c.object
<CustomObject>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowMany2__c</fullName>
        <label>How Many</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HowMany3__c</fullName>
        <label>How Many</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HowMany4__c</fullName>
        <label>How Many</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyTextField__c</fullName>
        <label>New Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>Test Field</label>
        <type>AutoNumber</type>
    </fields>
    <label>Todo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Todo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Todos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>